fix: layout shift in network route

--- a/src/index.css
+++ b/src/index.css
@@ -111,6 +111,9 @@
 }
 
 @layer base {
+	html {
+		overflow-y: scroll;
+	}
 	* {
 		@apply border-border outline-ring/50;
 	}
